--- a/html/Akelarre.html
+++ b/html/Akelarre.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
+<script src="../js/Navigation.js"></script>
 <div class="row">
-    <div class="col">
-        <img src="../img/img1.png" alt="Maria" class="img-thumbnail"  style="object-fit: cover; height: 35vh; width:100%;">
+    <div class="col pb-3">
+
+        <div class="img__wrap">
+            <img src="../img/img1.png" alt="Maria" class="img-thumbnail img__img"  style="object-fit: cover; height: 35vh; width:100%;">
+            <div class="img__description_layer">
+              <h3 class="img__description">ANA: AKELARRE DE NATURALEZA</h3>
+            </div>
+        </div>
+        
     </div>
-    <div class="col">
-        <img src="../img/img2.png" alt="Orreka" class="img-thumbnail"  style="object-fit: cover; height: 35vh; width:100%;">
+    <div class="col pb-3">
+        <div class="img__wrap">
+            <img src="../img/img2.png" alt="Orreka" class="img-thumbnail img__img"  style="object-fit: cover; height: 35vh; width:100%;">
+            <div class="img__description_layer">
+              <h3 class="img__description">MAIDER: AKELARRE DE FIESTAS</h3>
+            </div>
+        </div>
     </div>
   
 </div>
 <div class="row">
     <div class="col">
-        <img src="../img/img3.png" alt="Maider" class="img-thumbnail"  style="object-fit: cover; height: 35vh; width:100%;">
+        <div class="img__wrap">
+            <img src="../img/img3.png" alt="Maider" class="img-thumbnail img__img"  style="object-fit: cover; height: 35vh; width:100%;">
+            <div class="img__description_layer"  onclick="maria()" style="cursor:pointer;">
+              <h3 class="img__description">MARÍA: AKELARRE GASTRONÓMICO</h3>
+            </div>
+        </div>
+
     </div>
     <div class="col">
-        <img src="../img/img4.png" alt="Ana" class="img-thumbnail"  style="object-fit: cover; height: 35vh; width:100%;">
+        <div class="img__wrap">
+            <img src="../img/img4.png" alt="Ana" class="img-thumbnail img__img"  style="object-fit: cover; height: 35vh; width:100%;">
+            <div class="img__description_layer">
+              <h3 class="img__description">OLAIA: AKELARRE DE FAMILIA</h3>
+            </div>
+        </div>
+
 </div>
