--- a/html/Head.html
+++ b/html/Head.html
@@ -7,3 +7,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="../js/Navbar.js"></script>
     <script type="text/javascript" src="../js/Navigation.js"></script>
+    <script type="text/javascript" src="../js/Events.js"></script>
