--- a/html/Head.html
+++ b/html/Head.html
@@ -8,3 +8,5 @@
     <script type="text/javascript" src="../js/Navbar.js"></script>
     <script type="text/javascript" src="../js/Navigation.js"></script>
     <script type="text/javascript" src="../js/Events.js"></script>
+    <script type="text/javascript" src="https://www.geo.euskadi.eus/bisorea/v4/API/ApiGeoEuskadi.js" id="script1"></script>
+    <link rel="icon" type="image/png" href="../img/favicon.png">
