--- a/html/Akelarre.html
+++ b/html/Akelarre.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <script src="../js/Navigation.js"></script>
+<h3 mb-2>Escoja una experiencia</h3>
 <div class="row">
     <div class="col pb-3">
 
         <div class="img__wrap">
-            <img src="../img/img1.png" alt="Maria" class="img-thumbnail img__img"  style="object-fit: cover; height: 35vh; width:100%;">
+            <img src="../img/img1.png" alt="Maria" class="img-thumbnail img__img"  style="object-fit: cover; height: 30vh; width:100%;">
             <div class="img__description_layer">
               <h3 class="img__description">ANA: AKELARRE DE NATURALEZA</h3>
             </div>
@@ -13,7 +14,7 @@
     </div>
     <div class="col pb-3">
         <div class="img__wrap">
-            <img src="../img/img2.png" alt="Orreka" class="img-thumbnail img__img"  style="object-fit: cover; height: 35vh; width:100%;">
+            <img src="../img/img2.png" alt="Orreka" class="img-thumbnail img__img"  style="object-fit: cover; height: 30vh; width:100%;object-position: 0 10%;">
             <div class="img__description_layer">
               <h3 class="img__description">MAIDER: AKELARRE DE FIESTAS</h3>
             </div>
@@ -24,7 +25,7 @@
 <div class="row">
     <div class="col">
         <div class="img__wrap">
-            <img src="../img/img3.png" alt="Maider" class="img-thumbnail img__img"  style="object-fit: cover; height: 35vh; width:100%;">
+            <img src="../img/img3.png" alt="Maider" class="img-thumbnail img__img"  style="object-fit: cover; height: 30vh; width:100%; object-position: 0 10%;">
             <div class="img__description_layer"  onclick="maria()" style="cursor:pointer;">
               <h3 class="img__description">MARÍA: AKELARRE GASTRONÓMICO</h3>
             </div>
@@ -33,7 +34,7 @@
     </div>
     <div class="col">
         <div class="img__wrap">
-            <img src="../img/img4.png" alt="Ana" class="img-thumbnail img__img"  style="object-fit: cover; height: 35vh; width:100%;">
+            <img src="../img/img4.png" alt="Ana" class="img-thumbnail img__img"  style="object-fit: cover; height: 30vh; width:100%; object-position: 0 10%;">
             <div class="img__description_layer">
               <h3 class="img__description">OLAIA: AKELARRE DE FAMILIA</h3>
             </div>
