--- a/html/GipuzkoaDeCine.html
+++ b/html/GipuzkoaDeCine.html
@@ -1,10 +1,11 @@
 <script src="../js/Navigation.js"></script>
+<h3 mb-2>Escoja una película</h3>
 <div class="row">
     <div class="col pb-3">
         <div class="img__wrap">
-            <img src="../img/8APELLIDOS.png" alt="8 Apellidos Vascos" class="img-thumbnail img__img" style="object-fit: cover; height: 30vh; width:100%;">
+            <img src="../img/elinternado.png" alt="El Internado" class="img-thumbnail img__img" style="object-fit: cover; height: 30vh; width:100%;">
             <div class="img__description_layer">
-              <h3 class="img__description">8 APELLIDOS VASCOS</h3>
+              <h3 class="img__description">EL INTERNADO</h3>
             </div>
         </div>
       </div>
