--- a/html/Home.html
+++ b/html/Home.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" >
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -7,39 +7,39 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item active" data-mdb-interval="1000">
       <img src="../img/img1.png" class="d-block w-100" style="height: 50vh; object-fit: cover;">
       <div class="carousel-caption d-none d-md-block" style="height:35%; position:absolute; bottom:20px;">
-        <h5><mark>First slide label</mark></h5>
-        <p><mark>Some representative placeholder content for the first slide.</mark></p>
+        <h5><mark>Hola, soy Ane</mark></h5>
+        <p><mark>Qiueres entrar en contacto con la naturaleza? Descubrir parques y paisajes de Gipuzkoa viviendo una experiencia de cine y disfrutar de un Akelarre para los 5 sentidos</mark></p>
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item" data-mdb-interval="1000">
       <img src="../img/img2.png" class="d-block w-100" style="height: 50vh; object-fit: cover; object-position: 0 20%;">
       <div class="carousel-caption d-none d-md-block" style="height:35%; position:absolute; bottom:20px;">
-        <h5><mark>Second slide label</mark></h5>
-        <p><mark>Some representative placeholder content for the second slide.</mark></p>
+        <h5><mark>Mi nombre es Maider</mark></h5>
+        <p><mark>Te gusta la fiesta? Quieres conocer las fiestas de los pueblos de gipuzkoa?</mark></p>
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item" data-mdb-interval="1000">
       <img src="../img/img3.png" class="d-block w-100" style="height: 50vh; object-fit: cover; object-position: 0 10%;">
       <div class="carousel-caption d-none d-md-block" style="height:35%; position:absolute; bottom:20px;">
-        <h5><mark>Third slide label</mark></h5>
-        <p><mark>Some representative placeholder content for the third slide.</mark></p>
-      </div>
+        <h5><mark>Hola, soy Maria</mark></h5>
+        <p><mark>Quieres vivir una experiencia gastronómica? Te gustaría disfrutar de la mejor comida de Gipuzkoa?</mark></p>
+      </div> 
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item" data-mdb-interval="1000">
       <img src="../img/img4.png" class="d-block w-100" style="height: 50vh; object-fit: cover; object-position: 0 30%;">
       <div class="carousel-caption d-none d-md-block" style="height:35%; position:absolute; bottom:20px;">
-        <h5><mark>Third slide label</mark></h5>
-        <p><mark>Some representative placeholder content for the third slide.</mark></p>
+        <h5><mark>Me llamo Olaia</mark></h5>
+        <p><mark>Quieres disfrutar de Gipuzkoa en familia? Hacer planes para todas las edades?</mark></p>
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item" data-mdb-interval="1000">
       <img src="../img/img5.png" class="d-block w-100" style="height: 50vh; object-fit: cover; object-position: 0 10%;">
       <div class="carousel-caption d-none d-md-block" style="height:35%; position:absolute; bottom:20px;">
-        <h5><mark>Third slide label</mark></h5>
-        <p><mark>Some representative placeholder content for the third slide.</mark></p>
+        <h5><mark>Hola, soy Orreka</mark></h5>
+        <p><mark>Te gustaría conocer la cultura Gipuzkoana? Conocer las costumbres más antigual del territorio?</mark></p>
       </div>
     </div>
   </div>
@@ -51,4 +51,13 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+
+</div>
+<div class="row">
+  <div class="col align-self-center">
+   <h4 class="mt-3"><b>Gipuzkoa de cine</b></h4>
+   <p>
+Una app interactiva para disfrutar de una experiencia de cine, única y personalizada.
+   </p>
+  </div>
 </div>
